# OpenStudioLandscapes-DagsterCodeLocation-JobProcessor

./: README.md  pyproject.toml
dagster/: workspace.yaml
src/OpenStudioLandscapes/Dagster/JobProcessor/dagster_job_processor/: definitions.py  settings.py
src/OpenStudioLandscapes/Dagster/JobProcessor/dagster_job_processor/assets/: constants_factory.py  read_yaml.py  submit_jobs.py
src/OpenStudioLandscapes/Dagster/JobProcessor/dagster_job_processor/config/: models.py
src/OpenStudioLandscapes/Dagster/JobProcessor/dagster_job_processor/jobs/: __init__.py
src/OpenStudioLandscapes/Dagster/JobProcessor/dagster_job_processor/resources/: __init__.py
src/OpenStudioLandscapes/Dagster/JobProcessor/dagster_job_processor/sensors/: __init__.py
src/OpenStudioLandscapes/Dagster/JobProcessor/deadline_templates/jobs/: __init__.py  job_base.py
src/OpenStudioLandscapes/Dagster/JobProcessor/deadline_templates/jobs/blender/: job_blender.py  job_blender_02.py  job_blender_SQ010_SH030.py  job_blender_SQ010_SH030.yml  job_blender__1cd5dd8b_c727_41b1_a88c_ba3a3fbc562a.py  job_blender__dae34b5a_efff_4cd9_a7e9_3e69fd4ef1bd.py
src/OpenStudioLandscapes/Dagster/JobProcessor/deadline_templates/jobs/blender/2022-12-14_ConnectPoints/: job_blender__1cd5dd8b_c727_41b1_a88c_ba3a3fbc562a.py
src/OpenStudioLandscapes/Dagster/JobProcessor/deadline_templates/jobs/blender/2023-11-13_EskofBubble/: job_blender__dae34b5a_efff_4cd9_a7e9_3e69fd4ef1bd.py
src/OpenStudioLandscapes/Dagster/JobProcessor/deadline_templates/jobs/blender/job_blender_SQ010_030_ExampleResult/: 2026-03-26_08-45-06_108684_job_blender_SQ010_SH030.py  plugin_info.txt  submission.json
src/OpenStudioLandscapes/Dagster/JobProcessor/deadline_templates/jobs/blender/old/: job_blender_SQ010_SH030.py
src/OpenStudioLandscapes/Dagster/JobProcessor/deadline_templates/jobs/houdini/: job_houdini.py  job_houdini_02.py  job_houdini_SQ010_SH030.yml
src/OpenStudioLandscapes/Dagster/JobProcessor/deadline_templates/jobs/houdini/old/: job_houdini.py
src/OpenStudioLandscapes/Dagster/JobProcessor/deadline_templates/jobs/nuke/: job_nuke.py  job_nuke_SQ010_SH030.yml
src/OpenStudioLandscapes/Dagster/JobProcessor/deadline_templates/jobs/nuke/old/: job_nuke.py  job_template_nuke.py
src/OpenStudioLandscapes/Dagster/JobProcessor/deadline_templates/plugins/: __init__.py  enum_plugins.py  plugin_base.py
src/OpenStudioLandscapes/Dagster/JobProcessor/deadline_templates/plugins/blender/: __init__.py  plugin_blender__4_1_1.py  plugin_blender_base.py
src/OpenStudioLandscapes/Dagster/JobProcessor/deadline_templates/plugins/houdini/: __init__.py  plugin_houdini__19_5_805.py  plugin_houdini_base.py
src/OpenStudioLandscapes/Dagster/JobProcessor/deadline_templates/plugins/nuke/: __init__.py  plugin_nuke__15_0v4.py  plugin_nuke_base.py
src/OpenStudioLandscapes/DagsterCodeLocation/JobProcessor/dagster_job_processor/: definitions.py  settings.py
src/OpenStudioLandscapes/DagsterCodeLocation/JobProcessor/dagster_job_processor/assets/: read_yaml.py  submit_jobs.py
src/OpenStudioLandscapes/DagsterCodeLocation/JobProcessor/dagster_job_processor/config/: models.py
src/OpenStudioLandscapes/DagsterCodeLocation/JobProcessor/dagster_job_processor/jobs/: __init__.py
src/OpenStudioLandscapes/DagsterCodeLocation/JobProcessor/dagster_job_processor/sensors/: __init__.py
src/OpenStudioLandscapes/DagsterCodeLocation/JobProcessor/deadline_templates/jobs/: job_base.py  models_submission.py
src/OpenStudioLandscapes/DagsterCodeLocation/JobProcessor/deadline_templates/jobs/blender/: job_blender_SQ010_SH030.yml
src/OpenStudioLandscapes/DagsterCodeLocation/JobProcessor/deadline_templates/jobs/houdini/: job_houdini_SQ010_SH030.yml
src/OpenStudioLandscapes/DagsterCodeLocation/JobProcessor/deadline_templates/jobs/nuke/: job_nuke_SQ010_SH030.yml
src/OpenStudioLandscapes/DagsterCodeLocation/JobProcessor/deadline_templates/plugins/: __init__.py  plugin_base.py
src/OpenStudioLandscapes/DagsterCodeLocation/JobProcessor/deadline_templates/plugins/blender/: __init__.py  plugin_blender__4_1_1.py
src/OpenStudioLandscapes/DagsterCodeLocation/JobProcessor/deadline_templates/plugins/houdini/: __init__.py  plugin_houdini__19_5_805.py
src/OpenStudioLandscapes/DagsterCodeLocation/JobProcessor/deadline_templates/plugins/nuke/: __init__.py  plugin_nuke__15_0v4.py
(+16 files in other folders)
