[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm>=9",
    "setuptools>=80",
]

[project]
authors = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
maintainers = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: OpenStudioLandscapes",
    "Programming Language :: Python",
]
name = "OpenStudioLandscapes-DagsterCodeLocation-JobProcessor"
dynamic = [
    "version",
]
description = "This is a Deadline Job Processor package for OpenStudioLandscapes-Dagster."
license-files = [
    "LICENSE.txt",
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "dagster==1.9.11",
#    "dagster-webserver",
    "gazu[cli]",
#    "OpenImageIO",
#    "OpenEXR",
    "OpenStudioLandscapes-DagsterCodeLocation-StreamingProcess @ git+https://github.com/michimussato/OpenStudioLandscapes-DagsterCodeLocation-StreamingProcess.git",
]

[project.optional-dependencies]
optional-base = [
    "OpenStudioLandscapes-Dagster[optional-base] @ git+https://github.com/michimussato/OpenStudioLandscapes-Dagster.git",
    "OpenStudioLandscapes-Deadline-10-2[optional-base] @ git+https://github.com/michimussato/OpenStudioLandscapes-Deadline-10-2.git",
]

[project.readme]
content-type = "text/markdown; charset=UTF-8"
file = "README.md"

[project.urls]
Homepage = "https://github.com/michimussato/OpenStudioLandscapes-DagsterCodeLocation-JobProcessor"

[tool.dagster]
module_name = "OpenStudioLandscapes.DagsterCodeLocation.JobProcessor.dagster_job_processor.definitions"
working_directory = "src"
project_name = "OpenStudioLandscapes-DagsterCodeLocation-JobProcessor"

#[tool.setuptools]
#include-package-data = true
#platforms = [
#    "Linux",
#]
#
#[tool.setuptools.packages.find]
#exclude = [
#    "tests",
#]
#include = [
#    "OpenStudioLandscapes.DagsterCodeLocation.JobProcessor"
#]
#namespaces = true
#where = [
#    "src/",
#]

[tool.setuptools]
include-package-data = true
#packages = [
#    "OpenStudioLandscapes.DagsterCodeLocation.JobProcessor",
#]
platforms = [
    "Linux",
]
[tool.setuptools.packages.find]
exclude = [
    "tests",
]
namespaces = true
where = [
    "src",
]
#include = ["OpenStudioLandscapes.DagsterCodeLocation.JobProcessor"]
include = ["OpenStudioLandscapes.DagsterCodeLocation.*"]
